--- a/final/package.json
+++ b/final/package.json
@@ -6,12 +6,22 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "db": "json-server -w db.json",
+    "tunnel": "ngrok http 3000"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.5.5",
+    "axios": "^1.7.9",
     "expo": "~52.0.7",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~13.0.2",
+    "expo-image-picker": "~16.0.3",
     "expo-status-bar": "~2.0.0",
+    "json-server": "^1.0.0-beta.3",
+    "ngrok": "^5.0.0-beta.2",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
@@ -19,9 +29,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-image-picker": "~16.0.3",
-    "@react-native-community/slider": "4.5.5"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
